1.2.6 - xxxxxxxxxxxxxx
======================
* When shutting down ZooKeeper, attempt a simple kill first before trying kill -9.

* Issue 51: Include log4j in standalone version

* Reworked how CLI options are displayed in the standalone version. There are so many now it was
getting confusing.

* Issue 55: Added a way to specify the ACL in the standalone version. Run with "--help" to see
the how to set the options.

1.2.5 - August 2, 2012
======================
* Various dependency version changes needed for internal Netflix compatibility.

* Pull 50 from user sclasen: basic auth config for exhibitor-standalone

1.2.4 - July 31, 2012
=====================
* Support shutting down. The Standalone version now sets a shutdown hook. There is also a REST
API for shutting down. Core-only users must set the shutdownProc in the ExhibitorArguments.

* Modified rolling config behavior. If an instance is NOT_SERVING, wait a bit before moving to next
server so as to avoid quorum loss.

* Fixed several problems with remote calls. In the UI this exhibited as control panel buttons not
working for remote servers.

* Change to 1.2.0 feature "Down or Not-Serving instances will now get restarted periodically". The
time period of restart is now based on the tickTime/initLimit/syncLimit (if available). It will
be 2 * max of tickTime * initLimit or syncLimit.

* Issue 38: Include HTTP 403 in the AWS status codes that indicate an S3 object is not found.

* Pull 45 from user cblack: If credentials are supplied, use them. Otherwise the AWS SDK will attempt
to resolve credentials in the following order:

Environment Variables - AWS_ACCESS_KEY_ID and AWS_SECRET_KEY
Java System Properties - aws.accessKeyId and aws.secretKey
Instance Profile Credentials - delivered through the Amazon EC2 metadata service.

1.2.3 - July 18, 2012
=====================
* Fixed some edge cases in pseudo lock that might leave lock files around

* File-based pseudo lock wasn't ignoring non-lock files
